--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -146,6 +146,24 @@
   color: var(--primary-color);
 }
 
+.nav-icon-discord {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+  color: #004f84;
+  transition: color 0.2s ease;
+  scale: 1.3;
+}
+
+.dark-mode .nav-icon-discord {
+  color: #ffffff;
+}
+
+.nav-icon-discord:hover {
+  color: var(--primary-color);
+}
+
 .icon {
   width: 1.25rem;
   height: 1.25rem;
