--- a/src/components/Admin/AdminPanel.css
+++ b/src/components/Admin/AdminPanel.css
@@ -676,11 +676,19 @@
 
       .admin-container {
         display: grid;
-        gap: 20px;
+        gap: 0px;
       }
 
       .resource-editor {
-        height: 100%;
+        height: 214.2%;
+      }
+
+      .resources-sidebar {
+        max-height: 80%;
+      }
+
+      .admin-panel {
+        height: 246.7vh;
       }
     
     .form-row {
