--- a/src/components/Resources/Resources.css
+++ b/src/components/Resources/Resources.css
@@ -399,21 +399,13 @@
     flex-direction: column;
   }
   
-  .search-filters-container {
-    flex-direction: column;
-    gap: 10px;
-  }
-  
-  .search-container {
-    max-width: none;
-  }
-  
   .quick-actions {
     width: 100%;
   }
-  
-  .feeling-lucky-button {
-    width: 100%;
+
+  & .feeling-lucky-button {
+    max-width: 100px;
+    font-size: 0.9em;
   }
 }
 
@@ -447,11 +439,13 @@
   .filter-dropdown {
     width: 100%;
     justify-content: space-between;
+    flex-direction: column;
   }
   
   .toggle-filters {
     width: 100%;
     justify-content: space-between;
+    flex-direction: column;
   }
   
   .filter-share-button {
@@ -495,6 +489,10 @@
   .resources-page {
     max-width: 100%;
   }
+
+  .search-filters-container {
+    gap: 0px;
+  }
   
   .resources-header h1 {
     font-size: 1.4rem;
@@ -506,7 +504,6 @@
   
   .toggle-filters {
     flex-direction: column;
-    align-items: flex-start;
     gap: 10px;
   }
 
